# riqtshaw

./: Cargo.toml  README.md
src/: configuration.rs  cpp.rs  lib.rs  rust.rs
src/builders/: func.rs  item_prop.rs  macros.rs  mod.rs  obj.rs  prop.rs  sig.rs
src/cpp/: code.rs  headers.rs  helpers.rs  mod.rs  raw_bindgen.rs
src/cpp/code/: mod.rs  model_getter_setter.rs  object.rs
src/cpp/code/model_getter_setter/: getter.rs  mod.rs  setter.rs
src/cpp/code/object/: functions.rs  mod.rs  properties.rs
src/cpp/code/object/properties/: mod.rs  setters.rs
src/cpp/codegen/: mod.rs
src/cpp/cpp/: complex_types.cpp_string  header_item_model.hpp  list_constructor_lambdas.cpp_string  list_member_fn_defs.cpp_string  tree_constructor_lambdas.cpp_string  tree_member_fn_defs.cpp_string
src/cpp/header/: item_model.rs  mod.rs  object.rs
src/rust/: c_ffi.rs  emitter.rs  mod.rs  model.rs  trait_.rs  util.rs  write.rs  write_helper.rs
src/rust/c_ffi/: funcs.rs  mod.rs  new_imp.rs  ptr_bundle.rs
src/rust/c_ffi/item_props/: list.rs  mod.rs  tree.rs
src/rust/c_ffi/models/: list.rs  mod.rs  tree.rs
src/rust/c_ffi/properties/: complex_non_optional.rs  complex_optional.rs  mod.rs  non_complex_non_optional.rs  non_complex_optional.rs
