[package]
name = "rust_qt_binding_generator"
version = "0.3.4"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
license = "AGPL-3.0-or-later"
documentation = "https://phabricator.kde.org/source/rust-qt-binding-generator/"
homepage = "https://phabricator.kde.org/source/rust-qt-binding-generator/"
repository = "https://anongit.kde.org/rust-qt-binding-generator"
edition = "2018"

[dependencies]
cc = { version = "1", features = ["parallel"] }
clap = "2"
regex= "1"
toml = "0.4.10"
